--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Learn Electronics with Arduino Projects</h1>
+                <h1>Learn Electronics with NUKE CRATE</h1>
                 <p>25 hands-on projects to master electronics and programming</p>
                 <a href="#projects" class="btn">Explore Projects</a>
             </div>
@@ -91,3 +91,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
