--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Nukelabs - Electronic Starter Kit Projects</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts: Ubuntu -->
+
+    <!-- Google Fonts: Ubuntu Bold -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+
     <style>
         .ubuntu-bold {
             font-family: 'Ubuntu', sans-serif;
